force-app/main/default/objects/CampaignMember/fields/Cloudrop__Counter__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Counter__c</fullName>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>