force-app/main/default/objects/CampaignMember/fields/Cloudrop__Date_Time_of_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Date_Time_of_email_sent__c</fullName>
    <label>Date/Time of email sent</label>
    <type>DateTime</type>
</CustomField>