force-app/main/default/objects/CampaignMember/fields/Cloudrop__Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>