force-app/main/default/objects/CampaignMember/fields/Cloudrop__MassMailer_Campaign_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Campaign_Member_Status__c</fullName>
    <label>MassMailer Campaign Member Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>