force-app/main/default/objects/CampaignMember/fields/Cloudrop__Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>